--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,3 +1,6 @@
 @import "bulma/sass/utilities/initial-variables.sass";
 
 $color-grey: grey;
+$color-dark-blue: #1d212e;
+$color-pink: #fedfd4;
+$color-turquoise: #89c0dd;
