--- a/src/components/menu/menu.scss
+++ b/src/components/menu/menu.scss
@@ -4,6 +4,7 @@
 header {
   display: flex;
   flex-direction: row;
+  flex-flow: row wrap;
   justify-content: space-between;
   align-items: center;
   padding: $size-6;
@@ -78,6 +79,7 @@ header {
     }
 
     nav {
+      flex: 1 100%;
       overflow: hidden;
 
       &.closed {
@@ -90,6 +92,14 @@ header {
 
       ul {
         flex-direction: column;
+        align-items: flex-start;
+        li {
+          margin: 0;
+
+          &:not(:last-child) {
+            padding-bottom: $size-7;
+          }
+        }
       }
     }
   }
