--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -21,3 +21,13 @@
   src: url('./../../assets/fonts/ClarityCity-Black.ttf') format('truetype'),
   url('./../../assets/fonts/ClarityCity-Black.otf') format('opentype');
 }
+
+@font-face {
+  font-family: 'icomoon';
+  font-weight: 400; // black
+  font-style: normal;
+  src: url('./../../assets/fonts/icomoon.ttf') format('truetype'),
+  url('./../../assets/fonts/icomoon.eot') format('embedded-opentype'),
+  url('./../../assets/fonts/icomoon.svg') format('svg'),
+  url('./../../assets/fonts/icomoon.woff') format('woff');
+}
