--- a/src/components/layout/layout.scss
+++ b/src/components/layout/layout.scss
@@ -1,4 +1,5 @@
 @import "bulma/sass/base/minireset.sass";
+@import "bulma/sass/helpers/visibility.sass";
 @import "./../../styles/fonts.scss";
 @import "./../../styles/variables.scss";
 
