--- a/src/components/menu/menu.scss
+++ b/src/components/menu/menu.scss
@@ -2,6 +2,7 @@
 @import "./../../styles/mixins.scss";
 
 header {
+  z-index: 1;
   display: flex;
   flex-direction: row;
   flex-flow: row wrap;
@@ -14,7 +15,6 @@ header {
     @include animate-default;
 
     cursor: pointer;
-    display: none;
     margin-top: -3px;
     opacity: 1;
 
@@ -72,10 +72,6 @@ header {
       }
     }
   }
-
-  .contact {
-    display: none;
-  }
 }
 
 @media (max-width: $tablet) {
@@ -83,7 +79,6 @@ header {
     justify-content: initial;
 
     .menu-burger {
-      display: initial;
       margin-right: $size-6;
     }
 
@@ -112,7 +107,6 @@ header {
 
     .contact {
       flex-grow: 2;
-      display: initial;
     }
   }
 }
