--- a/src/components/homepage/homepage.scss
+++ b/src/components/homepage/homepage.scss
@@ -2,32 +2,34 @@
 @import "./../../styles/mixins.scss";
 
 section.homepage {
-  position: relative;
+  figure {
+    position: relative;
 
-  .contact {
-    position: absolute;
-    right: $size-4;
-    bottom: $size-4;
-
-    a {
-      @include animate-default();
-
-      color: white;
-      font-size: $size-6;
-      opacity: 1;
-
-      &:hover {
-        opacity: .7;
-      }
-    }
-
-    .social-networks {
-      margin-top: $size-4;
+    .contact {
+      position: absolute;
+      right: $size-4;
+      bottom: $size-4;
 
       a {
-        font-size: $size-5;
-        float: right;
-        margin-left: $size-6;
+        @include animate-default();
+
+        color: white;
+        font-size: $size-6;
+        opacity: 1;
+
+        &:hover {
+          opacity: .7;
+        }
+      }
+
+      .social-networks {
+        margin-top: $size-4;
+
+        a {
+          font-size: $size-5;
+          float: right;
+          margin-left: $size-6;
+        }
       }
     }
   }
