--- a/src/components/biography/biography.scss
+++ b/src/components/biography/biography.scss
@@ -1,11 +1,11 @@
 @import "./../../styles/variables.scss";
 
 section.biography {
-  margin-top: $size-2;
+  margin: $size-1 auto;
 
   h1 {
     font-size: $size-4;
-    font-weight: 700;
+    font-weight: $font-bold;
     margin-bottom: $size-4;
   }
 
@@ -14,6 +14,7 @@ section.biography {
       text-align: justify;
       line-height: 1.5;
       margin-bottom: $size-4;
+      font-weight: $font-light;
     }
 
     &.is-collapsed {
