--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -1,5 +1,13 @@
 @font-face {
   font-family: 'ClarityCity';
+  font-weight: 300; // light
+  font-style: normal;
+  src: url('./../../assets/fonts/ClarityCity-Light.ttf') format('truetype'),
+  url('./../../assets/fonts/ClarityCity-Light.otf') format('opentype');
+}
+
+@font-face {
+  font-family: 'ClarityCity';
   font-weight: 400; // normal
   font-style: normal;
   src: url('./../../assets/fonts/ClarityCity-Regular.ttf') format('truetype'),
