--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,7 +1,14 @@
 @import "bulma/sass/utilities/initial-variables.sass";
 
+// colors
 $color-grey: grey;
 $color-dark-blue: #1d212e;
 $color-pink: #fedfd4;
 $color-orange: #ec835b;
 $color-turquoise: #89c0dd;
+
+// fonts
+$font-light: 300;
+$font-normal: 400;
+$font-bold: 700;
+$font-black: 900;
