--- a/src/components/layout/layout.scss
+++ b/src/components/layout/layout.scss
@@ -2,6 +2,7 @@
 @import "bulma/sass/helpers/visibility.sass";
 @import "./../../styles/fonts.scss";
 @import "./../../styles/variables.scss";
+@import "./../../styles/mixins.scss";
 
 button {
   background: none;
@@ -9,6 +10,17 @@ button {
   border: none;
   padding: 0;
   font-size: $size-6;
+}
+
+.btn-teal {
+  @include animate-fade-link();
+
+  display: inline-block;
+  background-color: $color-turquoise;
+  color: white;
+  font-weight: $font-bold;
+  padding: $size-7;
+  margin-top: $size-5;
 }
 
 * {
