--- a/src/components/layout/layout.scss
+++ b/src/components/layout/layout.scss
@@ -15,6 +15,7 @@ button {
 .btn-teal {
   @include animate-fade-link();
 
+  cursor: pointer;
   display: inline-block;
   background-color: $color-turquoise;
   color: white;
