--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -2,6 +2,7 @@
   font-family: 'ClarityCity';
   font-weight: 300; // light
   font-style: normal;
+  font-display: swap;
   src: url('./../../assets/fonts/ClarityCity-Light.ttf') format('truetype'),
   url('./../../assets/fonts/ClarityCity-Light.otf') format('opentype');
 }
@@ -10,6 +11,7 @@
   font-family: 'ClarityCity';
   font-weight: 400; // normal
   font-style: normal;
+  font-display: swap;
   src: url('./../../assets/fonts/ClarityCity-Regular.ttf') format('truetype'),
   url('./../../assets/fonts/ClarityCity-Regular.otf') format('opentype');
 }
@@ -18,6 +20,7 @@
   font-family: 'ClarityCity';
   font-weight: 700; // bold
   font-style: normal;
+  font-display: swap;
   src: url('./../../assets/fonts/ClarityCity-Bold.ttf') format('truetype'),
   url('./../../assets/fonts/ClarityCity-Bold.otf') format('opentype');
 }
@@ -26,6 +29,7 @@
   font-family: 'ClarityCity';
   font-weight: 900; // black
   font-style: normal;
+  font-display: swap;
   src: url('./../../assets/fonts/ClarityCity-Black.ttf') format('truetype'),
   url('./../../assets/fonts/ClarityCity-Black.otf') format('opentype');
 }
@@ -34,6 +38,7 @@
   font-family: 'icomoon';
   font-weight: 400; // black
   font-style: normal;
+  font-display: swap;
   src: url('./../../assets/fonts/icomoon.ttf') format('truetype'),
   url('./../../assets/fonts/icomoon.eot') format('embedded-opentype'),
   url('./../../assets/fonts/icomoon.svg') format('svg'),
