use dynamic images based on layout width

--- a/src/components/homepage/homepage.scss
+++ b/src/components/homepage/homepage.scss
@@ -2,8 +2,12 @@
 @import "./../../styles/mixins.scss";
 
 section.homepage {
-  figure {
+  figure.banner {
     position: relative;
+
+    picture, source, img {
+      width: 100%;
+    }
 
     .contact {
       position: absolute;
