--- a/src/components/menu/menu.scss
+++ b/src/components/menu/menu.scss
@@ -63,6 +63,12 @@ header {
             width: 100%;
           }
         }
+
+        &.active {
+          .separator {
+            width: 100%;
+          }
+        }
       }
     }
   }
