--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -4,6 +4,7 @@ $header-height: 64px;
 
 // colors
 $color-grey: grey;
+$color-grey-light: #faf7f7;
 $color-dark-blue: #1d212e;
 $color-pink: #fedfd4;
 $color-orange: #ec835b;
