--- a/src/components/layout/layout.scss
+++ b/src/components/layout/layout.scss
@@ -25,8 +25,8 @@ button {
 }
 
 h1.title {
-  font-size: $size-5;
-  font-weight: $font-bold;
+  font-size: $size-4;
+  font-weight: $font-black;
   margin-bottom: $size-4;
 }
 
