--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -1,3 +1,19 @@
+@keyframes blink {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: .5;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@mixin animate-blink() {
+  animation: blink 2s ease-in-out infinite;
+}
+
 @mixin animate-default() {
   transition: all 0.2s ease-in-out;
 }
