--- a/src/components/homepage/extended-play.scss
+++ b/src/components/homepage/extended-play.scss
@@ -56,7 +56,7 @@
   .background {
     border-radius: 5px;
     padding: $size-4;
-    background-color: white;
+    background-color: $color-white;
 
     h3 {
       font-weight: $font-bold;
