--- a/src/components/homepage/homepage.scss
+++ b/src/components/homepage/homepage.scss
@@ -17,7 +17,7 @@ section.homepage {
       a {
         @include animate-fade-link();
 
-        color: white;
+        color: $color-white;
         font-size: $size-6;
       }
 
