--- a/src/components/layout/layout.scss
+++ b/src/components/layout/layout.scss
@@ -18,7 +18,7 @@ button {
   cursor: pointer;
   display: inline-block;
   background-color: $color-turquoise;
-  color: white;
+  color: $color-white;
   font-weight: $font-bold;
   padding: $size-7;
   margin-top: $size-5;
