--- a/src/components/menu/menu.scss
+++ b/src/components/menu/menu.scss
@@ -2,10 +2,10 @@
 @import "./../../styles/mixins.scss";
 
 header {
-  z-index: 1;
+  z-index: $z-index-2;
   position: fixed;
   width: 100%;
-  background-color: white;
+  background-color: $color-white;
   display: flex;
   flex-direction: row;
   flex-flow: row wrap;
