--- a/src/components/tour/tour.scss
+++ b/src/components/tour/tour.scss
@@ -10,7 +10,7 @@ section.tour {
   }
 
   table.show-table {
-    background-color: white;
+    background-color: $color-white;
     width: 100%;
 
     tr {
@@ -31,7 +31,7 @@ section.tour {
   }
 
   article {
-    background-color: white;
+    background-color: $color-white;
     padding: $size-6;
     line-height: 1.5;
     margin-bottom: $size-6;
