--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,10 +1,16 @@
 @import "bulma/sass/utilities/initial-variables.sass";
 
 $header-height: 64px;
+$player-height: 70px;
+
+// z-indexes
+$z-index-1: 1;
+$z-index-2: 2;
 
 // colors
 $color-white: #ffffff;
-$color-grey: grey;
+$color-grey: #747d8c;
+$color-red: #ff4757;
 $color-grey-light: #faf7f7;
 $color-dark-blue: #1d212e;
 $color-pink: #fedfd4;
