--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -3,6 +3,7 @@
 $header-height: 64px;
 
 // colors
+$color-white: #ffffff;
 $color-grey: grey;
 $color-grey-light: #faf7f7;
 $color-dark-blue: #1d212e;
