--- a/src/components/pro/pro.scss
+++ b/src/components/pro/pro.scss
@@ -6,11 +6,15 @@ section.pro {
 
   .documents {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: wrap;
 
     a {
       @include animate-fade-link();
 
+      flex-grow: 1;
+      margin: auto $size-7;
       background-color: $color-dark-blue;
       color: $color-white;
       display: inline-block;
