add latest clip onto the homepage

--- a/src/components/homepage/homepage.scss
+++ b/src/components/homepage/homepage.scss
@@ -33,6 +33,11 @@ section.homepage {
     }
   }
 
+  section.latest-clip {
+    background-color: $color-dark-blue;
+    margin-bottom: $size-2;
+  }
+
   section.newscast {
     display: flex;
     flex-direction: row;
